# jellyfin-media-renamer

./: LICENSE  README.md  main.py  pyproject.toml
jellyfin_media_renamer/: common.py  main.py  movies.py  shows.py
tests/: test_common.py  test_main.py  test_shows.py
